<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    android:key="category_appearance"
    android:title="@string/prefcat_general_appearance">

    <ListPreference
      android:key="app_theme"
      android:title="@string/prefs_app_theme_title"
      android:summary="@string/prefs_app_theme_summary"
      android:entries="@array/theme_entries"
      android:entryValues="@array/theme_values"
      android:defaultValue="dark"
      app:useSimpleSummaryProvider="true" />

    <ListPreference
      android:key="app_language"
      android:title="@string/prefs_app_language_title"
      android:summary="@string/prefs_app_language_summary"
      android:entries="@array/language_entries"
      android:entryValues="@array/language_values"
      android:defaultValue="en"
      app:useSimpleSummaryProvider="true" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="category_startup"
    android:title="@string/prefcat_general_startup">

    <ListPreference
      android:key="general_startup_behavior"
      android:title="@string/prefs_general_startup_behavior_title"
      android:summary="@string/prefs_general_startup_behavior_summary"
      android:entries="@array/startup_entries"
      android:entryValues="@array/startup_values"
      android:defaultValue="connections"
      app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
      android:key="confirm_exit"
      android:title="@string/prefs_confirm_exit_title"
      android:summary="@string/prefs_confirm_exit_summary"
      android:defaultValue="false" />

  </PreferenceCategory>

  <!-- Everything that governs open session tabs. `keep_screen_on` lives here
       rather than under Terminal because it also applies to VNC/SPICE tabs. -->
  <PreferenceCategory
    android:key="category_behavior"
    android:title="@string/prefcat_general_tabs">

    <SwitchPreferenceCompat
      android:key="swipe_between_tabs"
      android:title="@string/prefs_swipe_between_tabs_title"
      android:summary="@string/prefs_swipe_between_tabs_summary"
      android:defaultValue="true" />

    <ListPreference
      android:key="tab_swipe_edge_dp"
      android:title="@string/prefs_tab_swipe_edge_dp_title"
      android:summary="@string/prefs_tab_swipe_edge_dp_summary"
      android:dependency="swipe_between_tabs"
      android:defaultValue="96"
      android:entries="@array/tab_swipe_edge_entries"
      android:entryValues="@array/tab_swipe_edge_values" />

    <SwitchPreferenceCompat
      android:key="ui_confirm_tab_close"
      android:title="@string/prefs_ui_confirm_tab_close_title"
      android:summary="@string/prefs_ui_confirm_tab_close_summary"
      android:defaultValue="true" />

    <EditTextPreference
      android:key="ui_max_tabs"
      android:title="@string/prefs_ui_max_tabs_title"
      android:summary="@string/prefs_ui_max_tabs_summary"
      android:defaultValue="20"
      android:inputType="number"
      app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
      android:key="keep_screen_on"
      android:title="@string/prefs_keep_screen_on_title"
      android:summary="@string/prefs_keep_screen_on_summary"
      android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="category_accessibility"
    android:title="@string/prefcat_general_accessibility">

    <SwitchPreferenceCompat
      android:key="accessibility_high_contrast"
      android:title="@string/prefs_accessibility_high_contrast_title"
      android:summary="@string/prefs_accessibility_high_contrast_summary"
      android:defaultValue="false" />

    <SwitchPreferenceCompat
      android:key="accessibility_large_touch_targets"
      android:title="@string/prefs_accessibility_large_touch_targets_title"
      android:summary="@string/prefs_accessibility_large_touch_targets_summary"
      android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="category_notifications"
    android:title="@string/prefcat_general_notifications">

    <SwitchPreferenceCompat
      android:key="notifications_enabled"
      android:title="@string/prefs_notifications_enabled_title"
      android:summary="@string/prefs_notifications_enabled_summary"
      android:defaultValue="true" />

    <SwitchPreferenceCompat
      android:key="show_connection_notifications"
      android:title="@string/prefs_show_connection_notifications_title"
      android:summary="@string/prefs_show_connection_notifications_summary"
      android:defaultValue="true"
      android:dependency="notifications_enabled" />

    <SwitchPreferenceCompat
      android:key="show_error_notifications"
      android:title="@string/prefs_show_error_notifications_title"
      android:summary="@string/prefs_show_error_notifications_summary"
      android:defaultValue="true"
      android:dependency="notifications_enabled" />

    <SwitchPreferenceCompat
      android:key="show_file_transfer_notifications"
      android:title="@string/prefs_show_file_transfer_notifications_title"
      android:summary="@string/prefs_show_file_transfer_notifications_summary"
      android:defaultValue="true"
      android:dependency="notifications_enabled" />

    <SwitchPreferenceCompat
      android:key="notification_vibrate"
      android:title="@string/prefs_notification_vibrate_title"
      android:summary="@string/prefs_notification_vibrate_summary"
      android:defaultValue="true"
      android:dependency="notifications_enabled" />

    <Preference
      android:key="open_system_notification_settings"
      android:title="@string/prefs_open_system_notification_settings_title"
      android:summary="@string/prefs_open_system_notification_settings_summary" />

  </PreferenceCategory>

</PreferenceScreen>
