<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/container_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_retest_transport"
        android:title="@string/container_menu_reconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_registry_credentials"
        android:title="@string/container_menu_registry_credentials"
        app:showAsAction="never" />

    <!-- Destructive prunes live in their own submenu: options menus render no
         dividers, so a named group is the only real visual separation -->
    <item
        android:id="@+id/menu_prune_group"
        android:title="@string/container_menu_prune_group"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/action_prune_images"
                android:title="@string/container_menu_prune_images" />

            <item
                android:id="@+id/action_prune_volumes"
                android:title="@string/container_menu_prune_volumes" />

            <item
                android:id="@+id/action_prune_networks"
                android:title="@string/container_menu_prune_networks" />

        </menu>

    </item>

</menu>
